# App-AudioCapture

./: .gitignore  CMakeLists.txt  README.md  app.entitlements  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reader.cpp  reader.h
.github/workflows/: build.yml
scripts/: sign_and_notarize.sh
